--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link href="content/css/style.css" rel="stylesheet" />
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg" id="menu">
+    <nav class="navbar navbar-expand-md" id="menu">
         <a class="navbar-brand" href="#home">
             <img class="navbar-brand__img" src="content/images/logo2.png" />
         </a>
