--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
-    <link href="content/bootstrap.css" rel="stylesheet" />
-    <link href="content/font-awesome.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css" />
+    <link href="content/css/bootstrap.css" rel="stylesheet" />
+    <link href="content/css/font-awesome.css" rel="stylesheet" />
     <link href="content/css/style.css" rel="stylesheet" />
 </head>
 <body>
@@ -89,7 +90,8 @@
             <div class="row mt-0 mt-lg-5">
                 <div class="col-12 col-lg-4">
                     <div class="box-img">
-                        <img src="content/images/info-img.jpg" />
+                        <img src="content/images/anh.jpg" />
+                        <!--<img src="content/images/info-img.jpg" />-->
                     </div>
                 </div>
                 <div class="col-12 col-lg-8">
@@ -138,7 +140,7 @@
 
                         <ul class="box-contact">
                             <li class="box-contact__single">
-                                <div class="btn">Tải Xuống CV</div>
+                                <a target="_blank" href="https://drive.google.com/file/d/1pD5akh9023fXmG4JzbLeIkJttvKgjvli/view?usp=sharing" class="btn">Tải Xuống CV</a>
                             </li>
                             <li class="box-contact__single">
                                 <hr />
@@ -146,15 +148,15 @@
                             <li class="box-contact__single">
                                 <ul class="box-social">
                                     <li class="box-social__single">
-                                        <div class="btn">
+                                        <a target="_blank" href="https://www.facebook.com/tranphucthoaiit/" class="btn">
                                             <i class="fa fa-facebook-square"></i>
-                                        </div>
+                                        </a>
                                     </li>
 
                                     <li class="box-social__single">
-                                        <div class="btn">
+                                        <a target="_blank" href="https://github.com/tranphucthoai" class="btn">
                                             <i class="fa fa-github"></i>
-                                        </div>
+                                        </a>
                                     </li>
                                 </ul>
                             </li>
@@ -188,25 +190,18 @@
                             <ul class="col-box__content">
                                 <li class="col-box__content__item">
                                     <div>
-                                        Trường Học:
-                                    </div>
-                                    <div>
-                                        Cao Đẳng KTCN TP.HCM Cơ Sở Bình Dương
+                                        <span>Trường học:  </span>Cao Đẳng KTCN TP.HCM Cơ Sở Bình Dương
                                     </div>
                                 </li>
                                 <li class="col-box__content__item">
                                     <div>
-                                        Xếp Loại:
-                                    </div>
-                                    <div>
-                                        Giỏi
+                                        <span>Xếp Loại:  </span>
+                                        Khá
                                     </div>
                                 </li>
                                 <li class="col-box__content__item">
                                     <div>
-                                        Ngành Học:
-                                    </div>
-                                    <div>
+                                        <span>Ngành Học:  </span>
                                         Công nghệ thông tin
                                     </div>
                                 </li>
@@ -218,16 +213,24 @@
                             </h2>
                             <ul class="col-box__content">
                                 <li class="col-box__content__item">
-                                    <div class="fa fa-check-circle"></div>
-                                    <div>Chưa có kinh nghiệm</div>
+
+                                    <div>
+                                        <i class="fa fa-check-circle"></i>Responsive bằng css thuần (trang hóa đơn), bootstrap
+                                    </div>
                                 </li>
                                 <li class="col-box__content__item">
-                                    <div class="fa fa-check-circle"></div>
-                                    <div>Chưa từng đi thực tập</div>
+
+                                    <div>
+                                        <i class="fa fa-check-circle"></i>
+                                        Sử dụng plugin owl carousel, fancybox, animate, ...
+                                    </div>
                                 </li>
                                 <li class="col-box__content__item">
-                                    <div class="fa fa-check-circle"></div>
-                                    <div>Đã từng làm một số sản phẩm nhỏ</div>
+
+                                    <div>
+                                        <i class="fa fa-check-circle"></i>
+                                        Đã từng làm một số sản phẩm nhỏ
+                                    </div>
                                 </li>
                             </ul>
                         </div>
@@ -241,23 +244,24 @@
                             </h2>
                             <ul class="col-box__content">
                                 <li class="col-box__content__item">
-                                    <div class="fa fa-check-circle">
-                                    </div>
                                     <div>
-                                        Học tập thêm kiến thức để trở thành DEV chất lượng.
+                                        <i class="fa fa-check-circle">
+                                        </i>
+                                        Học thêm công nghệ mới để trở thành DEV giỏi.
                                     </div>
                                 </li>
                                 <li class="col-box__content__item">
-                                    <div class="fa fa-check-circle">
-                                    </div>
+
                                     <div>
-                                        Học thêm công nghệ mới, tạo ra sản phẩm tốt hơn.
+                                        <i class="fa fa-check-circle"></i>
+                                        Học thêm tiếng anh, kỹ năng research
                                     </div>
                                 </li>
                                 <li class="col-box__content__item">
-                                    <div class="fa fa-check-circle">
-                                    </div>
+
                                     <div>
+                                        <i class="fa fa-check-circle">
+                                        </i>
                                         Học sang lập trình Back-End (đang học).
                                     </div>
                                 </li>
@@ -269,16 +273,25 @@
                             </h2>
                             <ul class="col-box__content">
                                 <li class="col-box__content__item">
-                                    <div class="fa fa-check-circle"></div>
-                                    <div>Viết code</div>
+
+                                    <div>
+                                        <i class="fa fa-check-circle"></i>
+                                        Viết code
+                                    </div>
                                 </li>
                                 <li class="col-box__content__item">
-                                    <div class="fa fa-check-circle"></div>
-                                    <div>Đi phượt</div>
+
+                                    <div>
+                                        <i class="fa fa-check-circle"></i>
+                                        Đi phượt
+                                    </div>
                                 </li>
                                 <li class="col-box__content__item">
-                                    <div class="fa fa-check-circle"></div>
-                                    <div>Câu cá</div>
+
+                                    <div>
+                                        <i class="fa fa-check-circle"></i>
+                                        Câu cá
+                                    </div>
                                 </li>
                             </ul>
                         </div>
@@ -324,7 +337,7 @@
                                         <li class="skills-content-list-item">
                                             <div class="skills-content-list-item-info">
                                                 <span class="skills-content-list-item-info__name">JAVASCRIPT/JQUERY</span>
-                                                <span class="skills-content-list-item-info__percent">60%</span>
+                                                <span class="skills-content-list-item-info__percent">50%</span>
                                             </div>
                                             <div class="skills-content-list-item-progress">
                                                 <div class="skills-content-list-item-progress__bar"></div>
@@ -360,7 +373,7 @@
                                         <li class="skills-content-list-item">
                                             <div class="skills-content-list-item-info">
                                                 <span class="skills-content-list-item-info__name">PHOTOSHOP</span>
-                                                <span class="skills-content-list-item-info__percent">70%</span>
+                                                <span class="skills-content-list-item-info__percent">60%</span>
                                             </div>
                                             <div class="skills-content-list-item-progress">
                                                 <div class="skills-content-list-item-progress__bar"></div>
@@ -394,17 +407,21 @@
                         <div class="row">
                             <div class="col-12 col-md-6">
                                 <div class="product-content-item">
-                                    <h3 class="product-content-item__title">Web Du Lịch</h3>
+                                    <h3 class="product-content-item__title">Web Bán Nước</h3>
                                     <div class="product-content-item-img">
-                                        <img class="product-content-item-img__img" src="content/images/webDuLich.png" />
+                                        <a class="product-content-item-img__link" target="_blank" href="https://tranphucthoai.github.io/tpt-befresco/">
+                                            <img class="img-fluid" src="content/images/beFresco.jpg" />
+                                        </a>
                                     </div>
                                 </div>
                             </div>
                             <div class="col-12 col-md-6">
                                 <div class="product-content-item">
-                                    <h3 class="product-content-item__title">Web Du Lịch</h3>
+                                    <h3 class="product-content-item__title">Web Bán Bánh</h3>
                                     <div class="product-content-item-img">
-                                        <img class="product-content-item-img__img" src="content/images/webDuLich.png" />
+                                        <a class="product-content-item-img__link" target="_blank" href="https://tranphucthoai.github.io/tpt-cake/">
+                                            <img class="img-fluid" src="content/images/cake.jpg" />
+                                        </a>
                                     </div>
                                 </div>
                             </div>
@@ -412,9 +429,33 @@
                         <div class="row">
                             <div class="col-12 col-md-6">
                                 <div class="product-content-item">
-                                    <h3 class="product-content-item__title">Web Du Lịch</h3>
+                                    <h3 class="product-content-item__title">Web Học Tập</h3>
                                     <div class="product-content-item-img">
-                                        <img class="product-content-item-img__img" src="content/images/webDuLich.png" />
+                                        <a class="product-content-item-img__link" target="_blank" href="https://tranphucthoai.github.io/tpt-kids/">
+                                            <img class="img-fluid" src="content/images/kids.jpg" />
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-12 col-md-6">
+                                <div class="product-content-item">
+                                    <h3 class="product-content-item__title">Web Hóa Đơn</h3>
+                                    <div class="product-content-item-img">
+                                        <a class="product-content-item-img__link" target="_blank" href="https://tranphucthoai.github.io/tpt-bill/">
+                                            <img class="img-fluid" src="content/images/bill.jpg" />
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-12 col-md-6">
+                                <div class="product-content-item">
+                                    <h3 class="product-content-item__title">Web Spa</h3>
+                                    <div class="product-content-item-img">
+                                        <a class="product-content-item-img__link" target="_blank" href="https://tranphucthoai.github.io/tpt-spa/">
+                                            <img class="img-fluid" src="content/images/leoSpa.png" />
+                                        </a>
                                     </div>
                                 </div>
                             </div>
@@ -422,7 +463,9 @@
                                 <div class="product-content-item">
                                     <h3 class="product-content-item__title">Web Du Lịch</h3>
                                     <div class="product-content-item-img">
-                                        <img class="product-content-item-img__img" src="content/images/webDuLich.png" />
+                                        <a class="product-content-item-img__link" href="https://tranphucthoai.github.io/tpt-travel/" target="_blank">
+                                            <img class="img-fluid" src="content/images/webDuLich.png" />
+                                        </a>
                                     </div>
                                 </div>
                             </div>
@@ -481,7 +524,7 @@
                             </div>
                             <div class="card-flip-content-back">
                                 <h5 class="card-flip-content-back-txt">
-                                    <a class="card-flip-content-back-txt__a" href="https://www.facebook.com/tranphucthoaiit">fb.com/ tranphucthoaiit</a>
+                                    <a target="_blank" class="card-flip-content-back-txt__a" href="https://www.facebook.com/tranphucthoaiit">fb.com/ tranphucthoaiit</a>
                                 </h5>
                             </div>
                         </div>
