update plugin typing

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 ﻿<!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="utf-8" />
     <title>Trần Phúc Thoại</title>
@@ -13,6 +14,7 @@
     <link href="content/css/font-awesome.css" rel="stylesheet" />
     <link href="content/css/style.css" rel="stylesheet" />
 </head>
+
 <body>
     <nav class="navbar navbar-expand-md" id="menu">
         <a class="navbar-brand" href="#home">
@@ -54,12 +56,9 @@
                                     Phúc Thoại
                                 </h1>
                                 <div class="content-box__sub">
-                                    Front-end Developer
-                                    <!--I’m
-                                    <div class="list-word">
-                                        <p> Trần Phúc Thoại</p>
-                                        <p class="disable">Front-end Developer</p>
-                                    </div>-->
+                                    <a href="" class="typewrite" data-period="2000" data-type='[ "Hi, Im Thoai... " , "I Love Design... ", "I Love Develop... " ]'>
+                                        <span class="wrap"></span>
+                                    </a>
                                 </div>
                             </div>
                         </div>
@@ -104,7 +103,8 @@
                                         Tôi tên là Trần Phúc Thoại, là một Front-end developer vừa tốt nghiệp.
                                     </h2>
                                     <p class="box-text-about__description">
-                                        Sinh ra và lớn lên ở Bến Tre, nhập học ở Bình Dương năm 2017. Trong những năm học qua tôi có làm một số sản phẩm nhỏ như web du lịch, mỹ phẩm, ... Những sản phẩm tôi nêu trên bạn có thể xem chi tiết ở phần Sản Phẩm. Hiện tôi mong muốn tìm vào vị trí ....... của công ty.
+                                        Sinh ra và lớn lên ở Bến Tre, nhập học ở Bình Dương năm 2017. Trong những năm học qua tôi có làm một số sản phẩm nhỏ như web du lịch, mỹ phẩm, ... Những sản phẩm tôi nêu trên bạn có thể xem chi tiết ở phần Sản Phẩm. Hiện tôi mong muốn tìm vào vị trí .......
+                                        của công ty.
                                     </p>
                                     <hr />
                                 </div>
@@ -195,14 +195,12 @@
                                 </li>
                                 <li class="col-box__content__item">
                                     <div>
-                                        <span>Xếp Loại:  </span>
-                                        Khá
+                                        <span>Xếp Loại:  </span> Khá
                                     </div>
                                 </li>
                                 <li class="col-box__content__item">
                                     <div>
-                                        <span>Ngành Học:  </span>
-                                        Công nghệ thông tin
+                                        <span>Ngành Học:  </span> Công nghệ thông tin
                                     </div>
                                 </li>
                             </ul>
@@ -221,15 +219,13 @@
                                 <li class="col-box__content__item">
 
                                     <div>
-                                        <i class="fa fa-check-circle"></i>
-                                        Sử dụng plugin owl carousel, fancybox, animate, ...
+                                        <i class="fa fa-check-circle"></i> Sử dụng plugin owl carousel, fancybox, animate, ...
                                     </div>
                                 </li>
                                 <li class="col-box__content__item">
 
                                     <div>
-                                        <i class="fa fa-check-circle"></i>
-                                        Đã từng làm một số sản phẩm nhỏ
+                                        <i class="fa fa-check-circle"></i> Đã từng làm một số sản phẩm nhỏ
                                     </div>
                                 </li>
                             </ul>
@@ -246,23 +242,20 @@
                                 <li class="col-box__content__item">
                                     <div>
                                         <i class="fa fa-check-circle">
-                                        </i>
-                                        Học thêm công nghệ mới để trở thành DEV giỏi.
+                                        </i> Học thêm công nghệ mới để trở thành DEV giỏi.
                                     </div>
                                 </li>
                                 <li class="col-box__content__item">
 
                                     <div>
-                                        <i class="fa fa-check-circle"></i>
-                                        Học thêm tiếng anh, kỹ năng research
+                                        <i class="fa fa-check-circle"></i> Học thêm tiếng anh, kỹ năng research
                                     </div>
                                 </li>
                                 <li class="col-box__content__item">
 
                                     <div>
                                         <i class="fa fa-check-circle">
-                                        </i>
-                                        Học sang lập trình Back-End (đang học).
+                                        </i> Học sang lập trình Back-End (đang học).
                                     </div>
                                 </li>
                             </ul>
@@ -275,22 +268,19 @@
                                 <li class="col-box__content__item">
 
                                     <div>
-                                        <i class="fa fa-check-circle"></i>
-                                        Viết code
+                                        <i class="fa fa-check-circle"></i> Viết code
                                     </div>
                                 </li>
                                 <li class="col-box__content__item">
 
                                     <div>
-                                        <i class="fa fa-check-circle"></i>
-                                        Đi phượt
+                                        <i class="fa fa-check-circle"></i> Đi phượt
                                     </div>
                                 </li>
                                 <li class="col-box__content__item">
 
                                     <div>
-                                        <i class="fa fa-check-circle"></i>
-                                        Câu cá
+                                        <i class="fa fa-check-circle"></i> Câu cá
                                     </div>
                                 </li>
                             </ul>
@@ -317,7 +307,7 @@
                                         <li class="skills-content-list-item">
                                             <div class="skills-content-list-item-info">
                                                 <span class="skills-content-list-item-info__name">HTML/HTML5</span>
-                                                <span class="skills-content-list-item-info__percent">60%</span>
+                                                <span class="skills-content-list-item-info__percent">50%</span>
                                             </div>
                                             <div class="skills-content-list-item-progress">
                                                 <div class="skills-content-list-item-progress__bar"></div>
@@ -327,7 +317,7 @@
                                         <li class="skills-content-list-item">
                                             <div class="skills-content-list-item-info">
                                                 <span class="skills-content-list-item-info__name">CSS/CSS3</span>
-                                                <span class="skills-content-list-item-info__percent">60%</span>
+                                                <span class="skills-content-list-item-info__percent">50%</span>
                                             </div>
                                             <div class="skills-content-list-item-progress">
                                                 <div class="skills-content-list-item-progress__bar"></div>
@@ -337,7 +327,16 @@
                                         <li class="skills-content-list-item">
                                             <div class="skills-content-list-item-info">
                                                 <span class="skills-content-list-item-info__name">JAVASCRIPT/JQUERY</span>
-                                                <span class="skills-content-list-item-info__percent">40%</span>
+                                                <span class="skills-content-list-item-info__percent">35%</span>
+                                            </div>
+                                            <div class="skills-content-list-item-progress">
+                                                <div class="skills-content-list-item-progress__bar"></div>
+                                            </div>
+                                        </li>
+                                        <li class="skills-content-list-item">
+                                            <div class="skills-content-list-item-info">
+                                                <span class="skills-content-list-item-info__name">ASP.NET(WEBFORM)</span>
+                                                <span class="skills-content-list-item-info__percent">35%</span>
                                             </div>
                                             <div class="skills-content-list-item-progress">
                                                 <div class="skills-content-list-item-progress__bar"></div>
@@ -353,7 +352,7 @@
                                         <li class="skills-content-list-item">
                                             <div class="skills-content-list-item-info">
                                                 <span class="skills-content-list-item-info__name">BOOTSTRAP</span>
-                                                <span class="skills-content-list-item-info__percent">60%</span>
+                                                <span class="skills-content-list-item-info__percent">50%</span>
                                             </div>
                                             <div class="skills-content-list-item-progress">
                                                 <div class="skills-content-list-item-progress__bar"></div>
@@ -363,7 +362,7 @@
                                         <li class="skills-content-list-item">
                                             <div class="skills-content-list-item-info">
                                                 <span class="skills-content-list-item-info__name">SASS/SCSS</span>
-                                                <span class="skills-content-list-item-info__percent">60%</span>
+                                                <span class="skills-content-list-item-info__percent">50%</span>
                                             </div>
                                             <div class="skills-content-list-item-progress">
                                                 <div class="skills-content-list-item-progress__bar"></div>
@@ -373,7 +372,7 @@
                                         <li class="skills-content-list-item">
                                             <div class="skills-content-list-item-info">
                                                 <span class="skills-content-list-item-info__name">PHOTOSHOP</span>
-                                                <span class="skills-content-list-item-info__percent">40%</span>
+                                                <span class="skills-content-list-item-info__percent">50%</span>
                                             </div>
                                             <div class="skills-content-list-item-progress">
                                                 <div class="skills-content-list-item-progress__bar"></div>
@@ -591,7 +590,9 @@
         <script src="Scripts/popper.js"></script>
         <script src="Scripts/jquery-3.0.0.js"></script>
         <script src="Scripts/bootstrap.js"></script>
+        <script src="plugin/typing/typing.js"></script>
         <script src="Scripts/script.js"></script>
     </section>
 </body>
+
 </html>
