--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 
                         <ul class="box-contact">
                             <li class="box-contact__single">
-                                <a target="_blank" href="https://drive.google.com/file/d/1hBcsH0yWVrO-5ZOIrcw6WVn0xJeThO5w/view?usp=sharing" class="btn">Tải Xuống CV</a>
+                                <a target="_blank" href="https://i.topcv.vn/tranphucthoai?ref=3461898" class="btn">Tải Xuống CV</a>
                             </li>
                             <li class="box-contact__single">
                                 <hr />
